# solana-privacy-pools

./: .gitignore  Cargo.toml  build-circuits.sh  build.sh  circomkit.json  circuits.json  package-lock.json  package.json
.claude/: settings.local.json
circuits/: commitment.circom  commitment_main.circom  merkleTree.circom  merkleTree_main.circom  withdraw.circom
scripts/: convert-vkey.js  generate-proof-with-zkkit.js  generate-real-withdraw-proof.js  generate-realistic-withdraw-proof.js  generate-withdraw-proof.js  parse_vk_to_rust_fixed.js  realistic-5-deposits-withdraw.js  realistic-withdraw-proof.json  test-circuit-lean-imt.js  test-simple-withdraw.js  test-with-maci-crypto.js  verify-proof.js  withdraw-real.vkey.json  withdraw-vkey.json
src/: instructions.rs  lib.rs  merkle_tree.rs  poseidon.rs  state.rs  test_helpers.rs  verifying_key.rs
src/crypto/: merkle_tree.rs  mod.rs  poseidon.rs  precomputed_zeros.rs  verifying_key.rs
src/instructions/: deposit.rs  initialize.rs  mod.rs  ragequit.rs  types.rs  wind_down.rs  withdraw.rs
src/state/: lean_imt.rs  lean_imt_test.rs  mod.rs  test_compat.rs  zero_copy.rs
src/utils/: mod.rs  test_helpers.rs
tests/: README.md  ZK_PROOF_INTEGRATION.md  package-lock.json  package.json  run-tests.sh  setup.js  test-litesvm.js  test_sizes.rs  unit_tests.rs
tests/e2e/: check-size.js  core-flows.test.js  debug-deposit.test.js  debug-init.js  debug-litesvm.test.js  debug-wind-down.test.js  debug-withdraw.test.js  full-e2e-lean-imt.test.js  integration.test.js  (+8 more)
trusted-setup/: beacon_hash  final_contribution_beacon
(+8 files in other folders)
