[package]
name = "solana-privacy-pools"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.6"
groth16-solana = "0.0.1"
poseidon-ark = { git = "https://github.com/darklakefi/poseidon-ark" }
solana-program = "1.18"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1