[package]
name = "solana-privacy-pools"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.6"
groth16-solana = "0.0.1"
poseidon-ark = { path = "../poseidon-ark" }
solana-program = "1.18"
ark-bn254 = "0.4"
ark-ff = "0.4"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-utils = []

[dev-dependencies]
# Keep minimal for now

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1